@@ -1,5 +1,6 @@
 v0.0.5
 
+* [BGBUILD-75] Allow for some way to build and push EBS-backed AMIs to Amazon without bumping the version or release numbers in the .appl file
 * [BGBUILD-93] Add Red Hat Enterprise Linux 6 support
 * [BGBUILD-131] Check if OS is supported before executing the plugin
 * [BGBUILD-135] Display the region name when reporting the registered ami
